--- a/Meeting Agenda App/Src/HomePage.fx.yaml
+++ b/Meeting Agenda App/Src/HomePage.fx.yaml
@@ -89,7 +89,6 @@ HomePage As screen:
                     false
                 )
             );
-        TabIndex: =9
         Tooltip: ="Show Meetings whose have Agenda"
         TrueFill: =RGBA(48, 55, 120, 1)
         Visible: =false
@@ -131,7 +130,6 @@ HomePage As screen:
             RadiusTopLeft: =3
             RadiusTopRight: =3
             Size: =12
-            TabIndex: =8
             Tooltip: ="Search Subject,body"
             Width: =337
             X: =548
@@ -142,7 +140,7 @@ HomePage As screen:
             AccessibleLabel: ="Icon"
             Height: =24
             Icon: =Icon.Search
-            TabIndex: =8
+            TabIndex: =0
             Tooltip: ="Search Subject,body"
             Width: =28
             X: =855
@@ -163,7 +161,7 @@ HomePage As screen:
             FontWeight: =FontWeight.Bold
             Height: =30
             Size: =16
-            TabIndex: =2
+            TabIndex: =
             Text: ="Meeting"
             Width: =170
             X: =69
@@ -175,7 +173,7 @@ HomePage As screen:
             Font: =Font.Lato
             Height: =30
             Size: =14
-            TabIndex: =2
+            TabIndex: =
             Text: ="Select the meeting you'd like to capture"
             Width: =543
             X: =81
@@ -222,7 +220,6 @@ HomePage As screen:
             PressedColor: =Self.Color
             PressedFill: =Self.Fill
             Size: =10
-            TabIndex: =3
             Text: ="Upcoming"
             Width: =80
             X: =95
@@ -299,7 +296,6 @@ HomePage As screen:
             PressedColor: =Self.Color
             PressedFill: =Self.Fill
             Size: =10
-            TabIndex: =5
             Text: ="Past"
             Width: =80
             X: =222
@@ -357,7 +353,7 @@ HomePage As screen:
             RadiusTopLeft: =2
             RadiusTopRight: =2
             Size: =10
-            TabIndex: =10
+            TabIndex: =
             Text: ="Create Meeting"
             Tooltip: ="Create New Meeting"
             Width: =150
@@ -371,7 +367,7 @@ HomePage As screen:
             Height: =18
             Icon: =Icon.Add
             OnSelect: =Set(varShowCreateMeeting,true)
-            TabIndex: =10
+            TabIndex: =
             Tooltip: ="Create New Meeting"
             Width: =18
             X: =1155
@@ -903,7 +899,7 @@ HomePage As screen:
                     SubTitleFontSize: arrUiparamList.SubtitleFontSize
                 }
             );*/
-        TabIndex: =11
+        TabIndex: =
         Tooltip: ="Refresh Meetings"
         Width: =24
         X: =1319
@@ -961,7 +957,7 @@ HomePage As screen:
         Layout: =Layout.Vertical
         ShowNavigation: =true
         ShowScrollbar: =false
-        TabIndex: =4
+        TabIndex: =
         TemplatePadding: =0
         TemplateSize: =144
         Visible: =varShowUpcomingMeeting
@@ -1383,7 +1379,6 @@ HomePage As screen:
             RadiusTopLeft: =0
             RadiusTopRight: =0
             Size: =10
-            TabIndex: =7
             Text: ="View More"
             Tooltip: ="Shows Meeting Details"
             Width: =100
@@ -1864,7 +1859,7 @@ HomePage As screen:
         Layout: =Layout.Vertical
         ShowNavigation: =true
         ShowScrollbar: =false
-        TabIndex: =6
+        TabIndex: =
         TemplatePadding: =0
         TemplateSize: =143
         Visible: =!varShowUpcomingMeeting
@@ -2705,7 +2700,7 @@ HomePage As screen:
                 DisableButton,
                 false
             );
-        TabIndex: =1
+        TabIndex: =0
         Tooltip: ="Home Page"
         Width: =25
         X: =16
@@ -2751,7 +2746,7 @@ HomePage As screen:
             AccessibleLabel: ="rectTopMenu"
             Fill: =RGBA(48, 55, 120, 1)
             Height: =50
-            TabIndex: =1
+            TabIndex: =0
             Width: =1366
             ZIndex: =13
 
@@ -2759,7 +2754,7 @@ HomePage As screen:
             AccessibleLabel: ="imageLogo"
             Height: =50
             Image: =logo
-            TabIndex: =1
+            TabIndex: =0
             ZIndex: =14
 
         "'lbl_vrsn no.' As label":
@@ -2981,6 +2976,7 @@ HomePage As screen:
             ZIndex: =27
 
         Body As text:
+            AccessibleLabel: ="Body"
             BorderColor: =RGBA(0, 18, 107, 1)
             BorderStyle: =BorderStyle.None
             Color: =RGBA(153, 153, 153, 1)
@@ -3092,10 +3088,10 @@ HomePage As screen:
             DisplayMode: |+
                 =If(Radio2_2.Selected.Value="Organizer",DisplayMode.Disabled,DisplayMode.Edit)
                 
-            FalseText: =
+            FalseText: =true
             Height: =20
             TrueFill: =RGBA(56, 96, 178, 1)
-            TrueText: =
+            TrueText: =true
             Visible: =varShowCreateMeeting
             Width: =80
             X: =997
@@ -3420,7 +3416,7 @@ HomePage As screen:
             Height: =32
             Icon: =Icon.CancelBadge
             OnSelect: =Set(varShowCreateMeeting,false)
-            TabIndex: =1
+            TabIndex: =0
             Visible: =varShowCreateMeeting
             Width: =32
             X: =1326
@@ -3465,7 +3461,7 @@ HomePage As screen:
                     )
                 )
             OnSelect: =
-            TabIndex: =1
+            TabIndex: =0
             TemplatePadding: =0
             TemplateSize: =149
             Visible: =varShowCreateMeeting
@@ -3528,6 +3524,7 @@ HomePage As screen:
                 ZIndex: =3
 
             Icon1_2 As icon.Cancel:
+                AccessibleLabel: ="Icon"
                 BorderColor: =RGBA(0, 18, 107, 1)
                 Color: =RGBA(0, 18, 107, 1)
                 DisabledBorderColor: =RGBA(166, 166, 166, 1)
@@ -3542,7 +3539,7 @@ HomePage As screen:
                 PaddingLeft: =2
                 PaddingRight: =2
                 PaddingTop: =2
-                TabIndex: =1
+                TabIndex: =0
                 Width: =14
                 X: =134
                 Y: =29
@@ -3776,6 +3773,7 @@ HomePage As screen:
             ZIndex: =51
 
         AMLocation As dropdown:
+            AccessibleLabel: ="AMLocation"
             BorderColor: =RGBA(255,255,255, 1)
             ChevronBackground: =RGBA(255,255,255,1)
             ChevronFill: =RGBA(48, 55, 120,1)
