--- a/Meeting Agenda App/Src/ResourceScreen.fx.yaml
+++ b/Meeting Agenda App/Src/ResourceScreen.fx.yaml
@@ -18,6 +18,7 @@ ResourceScreen As screen:
         ZIndex: =1
 
     Attachmentcontrol As attachments:
+        AccessibleLabel: ="Attachmentcontrol"
         AddAttachmentText: =" Drop files to upload them instantly"
         BorderColor: =RGBA(56, 96, 178, 1)
         BorderStyle: =BorderStyle.None
@@ -121,6 +122,7 @@ ResourceScreen As screen:
         ZIndex: =4
 
     TextInput_Search As text:
+        AccessibleLabel: ="TextInput_Search"
         BorderColor: =RGBA(241, 244, 249, 1)
         BorderThickness: =0.5
         Color: =RGBA(153, 153, 153, 1)
@@ -157,6 +159,7 @@ ResourceScreen As screen:
         ZIndex: =11
 
     Gal_RsrcGallery As gallery.galleryVertical:
+        AccessibleLabel: ="Gal_RsrcGallery"
         BorderColor: =RGBA(241, 244, 249, 1)
         BorderThickness: =1
         Fill: =Color.White
@@ -183,7 +186,7 @@ ResourceScreen As screen:
             )
         Layout: =Layout.Vertical
         OnSelect: =false;Set(varItem,ThisItem.Id)
-        TabIndex: =1
+        TabIndex: =0
         TemplateSize: =59
         Width: =642
         X: =89
@@ -396,6 +399,7 @@ ResourceScreen As screen:
         ZIndex: =23
 
         bg_11 As rectangle:
+            AccessibleLabel: ="bg_11"
             Fill: =RGBA(248, 249, 255, 1)
             Height: =718
             TabIndex: =0
@@ -405,6 +409,7 @@ ResourceScreen As screen:
             ZIndex: =19
 
         iconHamburger_4 As icon.Hamburger:
+            AccessibleLabel: ="iconHamburger_4"
             Height: =24
             Icon: =Icon.Hamburger
             OnSelect: =Navigate('MeetingDetails Screen', ScreenTransition.Fade)
@@ -416,6 +421,7 @@ ResourceScreen As screen:
             ZIndex: =20
 
         "'Home Icon_4' As icon.Home":
+            AccessibleLabel: ="Home Icon_4"
             Height: =24
             Icon: =Icon.Home
             OnSelect: |-
@@ -436,6 +442,7 @@ ResourceScreen As screen:
             ZIndex: =21
 
         iconResourceAdd_4 As icon.Add:
+            AccessibleLabel: ="iconResourceAdd_4"
             Height: =24
             Icon: =Icon.Add
             OnSelect: =Navigate(ResourceScreen, ScreenTransition.Fade)
@@ -488,17 +495,22 @@ ResourceScreen As screen:
         ZIndex: =30
 
         rectTopMenu_4 As rectangle:
+            AccessibleLabel: ="rectTopMenu_4"
             Fill: =RGBA(48, 55, 120, 1)
             Height: =50
+            TabIndex: =0
             Width: =1366
             ZIndex: =17
 
         imageLogo_4 As image:
+            AccessibleLabel: ="imageLogo_4"
             Height: =50
             Image: =logo
+            TabIndex: =0
             ZIndex: =18
 
         Icon_Back As icon.ArrowLeft:
+            AccessibleLabel: ="Icon_Back"
             Color: =RGBA(255, 255, 255, 1)
             Height: =30
             Icon: =Icon.ArrowLeft
@@ -540,7 +552,7 @@ ResourceScreen As screen:
             PressedColor: ='lbl_SelectedMeeting Time and Dt.'.Color
             PressedFill: ='lbl_SelectedMeeting Time and Dt.'.Fill
             Size: =9
-            TabIndex: =2
+            TabIndex: =0
             Text: |-
                 =Text(SelectedMeeting.Start,"[$-en-US]mmmm dd, yyyy")&" | " & Lower(Text(SelectedMeeting.Start,"[$-en-US]hh:mm am/pm"))&" - "&Lower(Text(SelectedMeeting.End,"[$-en-US]hh:mm am/pm")) & " (" & DateDiff(SelectedMeeting.Start, SelectedMeeting.End, TimeUnit.Minutes) & " minutes)"
             Tooltip: ="Meeting Title"
@@ -551,8 +563,10 @@ ResourceScreen As screen:
         "'Version no.' As label":
             Align: =Align.Center
             Color: =RGBA(255, 255, 255, 1)
+            FocusedBorderThickness: =1
             Font: =Font.Lato
             Size: =14
+            TabIndex: =0
             Text: ="V1.0"
             Width: =103
             X: =1263
