--- a/Meeting Agenda App/Src/App.fx.yaml
+++ b/Meeting Agenda App/Src/App.fx.yaml
@@ -1,7 +1,7 @@
 App As appinfo:
     BackEnabled: =false
     OnStart: |
-        =Set(
+        =/*Set(
             varPrimaryColor,
             RGBA(
                 255,
@@ -9,7 +9,7 @@ App As appinfo:
                 255,
                 255
             )
-        );
+        );*/
         Set(
             varAgendaTab,
             true
