--- a/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
+++ b/Meeting Agenda App/Src/MeetingDetails Screen.fx.yaml
@@ -6343,7 +6343,7 @@
             Height: =20
             Icon: =Icon.Reload
             OnSelect: |
-                =Set(
+                =/*Set(
                     varPrimaryColor,
                     RGBA(
                         255,
@@ -6351,7 +6351,7 @@
                         255,
                         255
                     )
-                );
+                );*/
                 Set(
                     varAgendaTab,
                     true
