--- a/Meeting Agenda App/CanvasManifest.json
+++ b/Meeting Agenda App/CanvasManifest.json
@@ -50,7 +50,6 @@
       "enhanceddelegation": false,
       "enhancedgalleryinitialization": true,
       "errorhandling": false,
-      "excelcompatibility": false,
       "expandedsavedatasupport": true,
       "exportimportcomponents2": true,
       "externalmessage": false,
@@ -74,6 +73,7 @@
       "parallelcodegen": false,
       "pdffunction": false,
       "powerfxdecimal": false,
+      "powerfxv1": false,
       "projectionmapping": false,
       "reactformulabar": false,
       "reliableconcurrent": true,
@@ -108,11 +108,11 @@
     "DocumentType": "App",
     "EnableInstrumentation": false,
     "FileID": "785549d1-f3cd-4684-a7a1-a571bc725ba5",
-    "Id": "062106b9-09d8-4a9f-b2a8-0630359b3a51",
+    "Id": "1ee62414-acfb-4d4d-93e2-e4aa0d1a844d",
     "InstrumentationKey": "",
     "LocalDatabaseReferences": "{}",
     "ManualOfflineProfileId": "",
-    "Name": "Meeting Agenda App",
+    "Name": "Meeting+Agenda+App.msapp",
     "OriginatingVersion": "1.243",
     "ParserErrorCount": 0,
     "ShowStatusBar": false
